--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ dj-static==0.0.6
 Django==4.2.16
 django-bootstrap-v5==1.0.11
 django-htmx==1.19.0
+django-crontab
 django-smtp-ssl==1.0
 django-storages==1.14.4
 elevenlabs==1.9.0
